fixed overflow bug

--- a/src/App.css
+++ b/src/App.css
@@ -234,7 +234,8 @@ h2 {
 
 }
 .take-space{
-  margin-top: 7%;
+  margin-top: 6%;
+  /* scroll-behavior: smooth; */
 }
 /* .right-to-left ,  .left-to-right{
   width: 500px;
